# app

./: .gitignore  README.md  notes.txt  pubspec.yaml  spider.yaml
.fvm/: flutter_sdk
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/cano/wallet/: MainActivity.kt
android/app/src/main/kotlin/com/znncommunity/wallet/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Classes/: CMakeLists.txt  argon2_ffi.c
ios/Classes/argon2src/: argon2.c  core.c  encoding.c  ref.c
ios/Classes/argon2src/blake2/: blake2b.c
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: base_list.controller.dart  zenon.manager.dart
lib/core/controllers/: base_list.controller.dart  global.controller.dart  persistence.controller.dart
lib/core/managers/: hive.manager.dart  zenon.manager.dart
lib/core/utils/: console.dart  extensions.dart  globals.dart  styles.dart  utils.dart
lib/core/zenon_http_client/: zenon_http.dart
lib/playground/: playground.screen.dart  playground_screen.controller.dart
lib/resources/: images.dart
lib/utils/: my_loggy.dart
linux/: CMakeLists.txt  my_application.cc
macos/: libargon2_ffi.dylib  libpow_links.dylib
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+154 files in other folders)
